# hxtools

./: .gitignore  LICENSES.txt  configure.ac
cooledit/: HX_basic.syntax  HX_c.syntax  HX_diff.syntax
data/: gitconfig  hxtools_bashrc.bash  hxtools_dircolors
doc/: Makefile.am  aumeta.1  bin2c.1  bsvplay.1  cctypeinfo.1  changelog.rst  declone.1  fxterm.1  gpsh.1  hcdplay.1  hxtools.7  ldif-duplicate-attrs.1  mod2opus.1  pcmdiff.1  pcmmix.1  pegrep.1  peicon.1  pesubst.1  psthreads.1  qplay.1  qtar.1  rezip.1  rot13.1  sysinfo.1  xcp.1
examples/: 437cipher  prime.txt
kbd/: A1.fnt  B1.fnt  Makefile.am  README  cp437AB.uni  cp437x.uni
sadmin/: .gitignore  Makefile.am  clock_info.c  fd0ssh.c  ip_colored  printcaps.c  proc_stat_parse.c  psthreads.c  utmp_register.c  xfs_irecover.c
sdevel/: .gitignore  Makefile.am  bin2c.c  cctypeinfo.c  diff2php  gxxdm.cpp  peicon.c  sourcefuncsize  spec-beautifier
smm/: .gitignore  Makefile.am  aumeta  bsvplay.c  gpsh  hcdplay.c  mkvappend  mod2opus  move_moov  pcmmix.c  pcspkr.h  pcspkr_pcm.c  qplay.c
suser/: Makefile.am  declone.c  fxterm  pegrep  qpdecode  qtar  rezip  rot13  settime.pl  sysinfo.c  xcp.c
